tests/baselines/reference/tsxUnionTypeComponent.errors.txt
tests/cases/conformance/jsx/file.tsx(28,2): error TS2604: JSX element type 'X' does not have any construct or call signatures.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    
    import React = require('react');
    
    interface ComponentProps {
        AnyComponent: React.StatelessComponent<any> | React.ComponentClass<any>;
    }
    
    class MyComponent extends React.Component<ComponentProps, {}> {
        render() {
            const { AnyComponent } = this.props;
            const someProps = {};
            const button = <AnyComponent {...someProps}/>
            return (<div>{button}</div>);
        }
    }
    
    <MyComponent AnyComponent={() => <button>test</button>}/>
    
    class MyButtonComponent extends React.Component<{},{}> {
    }
    
    <MyComponent AnyComponent={MyButtonComponent} />
    
    type Invalid = string | React.ComponentClass<any>;
    
    var X: Invalid = "";
    
    <X /> // Should fail
     ~
!!! error TS2604: JSX element type 'X' does not have any construct or call signatures.
    